# difflab

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-gpu.txt  requirements.txt
.github/workflows/: ci.yml
configs/: audio_diffusion.yaml  audio_diffusion_smoke.yaml  class_conditioned_fashionmnist.yaml  class_conditioned_fashionmnist_smoke.yaml  finetune_butterflies.yaml  finetune_butterflies_smoke.yaml
docs/: audio.md  class_conditioning.md  configuration.md  ddim_inversion.md  finetuning.md  index.md  theory.md
notebooks/: 01_finetuning.ipynb  02_class_conditioned.ipynb  03_ddim_inversion.ipynb  04_audio_diffusion.ipynb
scripts/: _make_notebooks.py  make_assets.py  sample.py  train.py  verify_learning.py
src/difflab/: __init__.py  cli.py  config.py  hub.py  utils.py
src/difflab/data/: __init__.py  audio.py  images.py
src/difflab/inversion/: __init__.py  ddim_inversion.py
src/difflab/models/: __init__.py  schedulers.py  unet.py
src/difflab/sampling/: __init__.py  ddim.py  ddpm.py  guidance.py
src/difflab/training/: __init__.py  audio.py  class_conditioned.py  ema.py  finetune.py  trainer.py
tests/: conftest.py  test_audio.py  test_config_and_hub.py  test_inversion.py  test_sampling.py  test_schedulers.py  test_smoke_train.py  test_unet.py
